# bayesian-weak-signal-recovery

./: .gitignore  CMakeLists.txt  pyproject.toml  requirements.txt  setup.py
config/: inference_priors.json  sdr_priors.json  sdr_priors_12k.json  sdr_priors_blind.json  sdr_priors_colored.json  test_priors.json
scripts/: evaluate_crlb.py  evaluate_diagnostics.py  evaluate_significance.py  experimental_rjmcmc.py  generate_synthetic_data.py  orchestrate_pipeline.py  preprocess_sdr.py  run_inference.py  truncate_passband.py
src/bwsr_inference/: __init__.py
src/bwsr_inference/core/: bindings.cpp  models.cpp
src/bwsr_inference/forward_model/: __init__.py  background.py  composite.py  signal.py
src/bwsr_inference/sampling/: __init__.py  likelihood.py  nested_sampler.py  rjmcmc.py
src/bwsr_inference/validation/: __init__.py  crlb.py  look_elsewhere.py  residuals.py
tests/: test_composite.py  test_forward_model.py  test_likelihood.py  test_rjmcmc.py
